getData() downloads summer 2015 MTA data (not in repo) approx 340 MB

--- a/MTA-data-summer2015.ipynb
+++ b/MTA-data-summer2015.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -68,20 +68,42 @@
     "    #download from first url with header\n",
     "    response = ulib.urlopen(urllist[0])\n",
     "    df = pd.read_csv(response)\n",
+    "    #dfbig = pd.DataFrame({})\n",
     "    response.close()\n",
     "    \n",
     "    #download from remaining urls and concatenate without header to dataframe\n",
     "    for url in urllist[1:]:\n",
     "        response = ulib.urlopen(url)\n",
-    "        df = pd.concat(df, pd.read_csv(response, skiprows=1))\n",
+    "        df = pd.concat([df,pd.read_csv(response, skiprows=1)])\n",
     "        response.close()\n",
     "    \n",
-    "    pd.DataFrame.to_csv(df, 'Users/ash/ds/projects/data/mta/mta-turnstile-summer2015data.csv')\n",
+    "    #df = pd.concat([df,dfbig], axis=0)\n",
+    "    pd.DataFrame.to_csv(df, '/Users/ash/ds/projects/data/mta/mta-turnstile-summer2015data.csv')\n",
     "        \n",
     "            \n",
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "getData()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
