season data pull script ready

--- a/MTA-data-summer2015.ipynb
+++ b/MTA-data-summer2015.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "def getData(startdt=[15,7,4], savepath='/Users/ash/ds/projects/data/mta/mta_turnstile_summer2015data.csv'):\n",
-    "    \"\"\"takes in start dt as a tuple (yy,m,d) and savepath as a string ('path/<file.txt>'); saves a big CSV file to this path\n",
+    "    \"\"\"takes in start dt as a list [yy,m,d] and savepath as a string ('path/<file.txt>'); saves a big CSV file to this path\n",
     "    which can be read in as a giant pandas dataframe.\"\"\"\n",
     "    \n",
     "    #create filename url list (summer 2015 start date is 15,7,4)\n",
